--- a/client/package.json
+++ b/client/package.json
@@ -14,10 +14,12 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.15",
     "@mui/material": "^5.14.15",
+    "antd": "^5.10.2",
     "quill": "^1.3.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "socket.io-client": "^4.7.2",
+    "styled-components": "^6.1.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
