--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,1 @@
-MONGODB_URI=mongodb+srv://hishan:1234@cluster0.sksy2nt.mongodb.net/?retryWrites=true&w=majority
+MONGODB_URI="enter your mongo url here"
