--- a/server/.gitignore
+++ b/server/.gitignore
@@ -6,7 +6,11 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
-
+*.env
+*.env.example
+*.env.local
+*.env.staging
+.env
 node_modules
 dist
 dist-ssr
